// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertFeed should render 1`] = `
<div>
  <div
    class="alert-feed-root alert-notifications"
  >
    <div>
      <div
        class="alert alert-dismissible alert-info transition-slide-up-appear transition-slide-up-appear-active"
        role="alert"
      >
        <span
          class="alert-indicator"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-info-circle"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#info-circle"
            />
          </svg>
        </span>
        <strong
          class="lead"
        >
          Info:
        </strong>
        foo bar
        <button
          class="close"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-times"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#times"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertFeed should render with a message comprised of language keys with jsx substitutions 1`] = `
<div>
  <div
    class="alert-feed-root alert-notifications"
  >
    <div>
      <div
        class="alert alert-dismissible alert-info transition-slide-up-appear transition-slide-up-appear-active"
        role="alert"
      >
        <span
          class="alert-indicator"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-info-circle"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#info-circle"
            />
          </svg>
        </span>
        <strong
          class="lead"
        >
          Info:
        </strong>
        <b>
          Foo
        </b>
         USD
        <button
          class="close"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-times"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#times"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertFeed should render with modal open 1`] = `
<div>
  <div
    class="alert-feed-root alert-notifications modal-active"
  >
    <div>
      <div
        class="alert alert-dismissible alert-info transition-slide-up-appear transition-slide-up-appear-active"
        role="alert"
      >
        <span
          class="alert-indicator"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-info-circle"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#info-circle"
            />
          </svg>
        </span>
        <strong
          class="lead"
        >
          Info:
        </strong>
        foo bar
        <button
          class="close"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-times"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#times"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
